--- a/flex/04-flex-information/index.html
+++ b/flex/04-flex-information/index.html
@@ -10,18 +10,21 @@
   <body>
     <div class="title">Information!</div>
 
-    <img src="./images/barberry.png" alt="barberry">
-    <div class="text">This is a type of plant. We love this one.</div>
+    <div class="pics">
 
-    <img src="./images/chilli.png" alt="chili">
-    <div class="text">This is another type of plant. Isn't it nice?</div>
+      <figure><img src="./images/barberry.png" alt="barberry">
+      <div class="text"><figcaption>is a type of plant. We love this one.</figcaption></div></figure>
 
-    <img src="./images/pepper.png" alt="pepper">
-    <div class="text">We have so many plants. Yay plants.</div>
+    <figure><img src="./images/chilli.png" alt="chili">
+    <div class="text"><figcaption>is another type of plant. Isn't it nice?</figcaption></div></figure>
 
-    <img src="./images/saffron.png" alt="saffron">
-    <div class="text">I'm running out of things to say about plants.</div>
+    <figure><img src="./images/pepper.png" alt="pepper">
+    <div class="text"><figcaption>We have so many plants. Yay plants.</figcaption></div></figure>
 
+    <figure><img src="./images/saffron.png" alt="saffron">
+    <div class="text"><figcaption>I'm running out of things to say about plants.</figcaption></div>
+  </figure>
+    </div>
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
     <div class="footer">
       <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
